Give the card box shadow

--- a/src/style.css
+++ b/src/style.css
@@ -1,8 +1,9 @@
-.hello {
-  color: red;
-}
-
 .topPart {
   display: flex;
   justify-content: space-between;
+}
+
+.mainCard {
+  width: 250px;
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
 }
