--- a/src/style.css
+++ b/src/style.css
@@ -14,6 +14,9 @@
 
 .bottomPart {
   text-align: center;
+  background-color: whitesmoke;
+  color: gray;
+  font-family: sans-serif;
 }
 
 .mainInput {
