--- a/src/style.css
+++ b/src/style.css
@@ -3,11 +3,12 @@
   justify-content: space-between;
   font-size: 18px;
   font-family: sans-serif;
+  padding-left: 5px;
 }
 
 .mainCard {
   width: 250px;
-  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.19);
+  box-shadow: 0 4px 8px 0 rgba(0, 0, 0, 0.2), 0 6px 20px 0 rgba(0, 0, 0, 0.20);
 }
 
 .bottomBorder {
@@ -36,6 +37,7 @@
 .refreshIcon {
   width: 30px;
   padding-top: 14px;
+  padding-right: 5px;
 }
 
 .dotsIcon {
