--- a/src/style.css
+++ b/src/style.css
@@ -42,6 +42,12 @@
   padding: 16px 0;
 }
 
+.clearp:hover {
+  text-decoration-line: underline;
+  color: black;
+  cursor: pointer;
+}
+
 .refreshIcon {
   width: 30px;
   padding-top: 14px;
